--- a/src/segundatela.html
+++ b/src/segundatela.html
@@ -91,7 +91,7 @@
     <button class="btn-custom" onclick="startGame('Objetos')">Objetos</button>
     <button class="btn-custom" onclick="startGame('Desenhos')">Desenhos</button>
     <button class="btn-custom" onclick="startGame('Aleatórios')">Aleatórios</button>
-    <button class="btn-custom" id="backButton" onclick="location.href='index.html'">Voltar </button>
+    <button class="btn-custom" id="backButton" onclick="location.href='home.html'">Voltar </button>
 
     <script>
 
@@ -112,7 +112,7 @@
 
         function goBack() {
             alert("Deseja voltar à tela inicial?");
-            window.location.href = 'index.html';
+            window.location.href = 'home.html';
         }
     </script>
     
