--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
             <input type="text" id="nome" name="nome" required>
             <label for="data_nascimento">Data de Nascimento:</label>
                 <input type="date" id="data_nascimento" name="data_nascimento" required>
-            <button type="submit">Cadastrar</button>
+        <button onclick="location.href='home.html'">Cadastrar</button>
         </form>
     </div>
     
