--- a/src/home.html
+++ b/src/home.html
@@ -91,7 +91,7 @@
     <div class="container">
         <h1>Jogo de Mímica</h1>
         <button id="btnPsicologa" class="btn btn-custom" onclick="location.href='segundatela.html'">Jogar</button>
-        <button id="btnCrianca" class="btn btn-custom" onclick="location.href='estatisticas.html'">Estatísticas</button>
+        <button id="btnCrianca" class="btn btn-custom" onclick="location.href='estatisticas.php'">Estatísticas</button>
     </div>
 
     <div class="image-container" id="img1">
