--- a/src/terceiratela.html
+++ b/src/terceiratela.html
@@ -39,6 +39,10 @@
             top: 10px;
             left: 10px;
         }
+        #timer {
+            font-size: 2rem;
+            margin-bottom: 20px;
+        }
         .image-container {
             margin-bottom: 20px;
         }
@@ -47,22 +51,12 @@
             border-radius: 10px;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
         }
-        #timer {
-            font-size: 2rem;
-            margin-bottom: 20px;
-        }
-        .button-container {
-            display: flex;
-            justify-content: center;
-            gap: 10px; /* Espaço entre os botões */
-        }
-
     </style>
 </head>
 <body>
-    <h1 id="categoriaTitulo"></h1>
+    <h1>Jogo de Mímica</h1>
     <div class="image-container">
-        <img id="img" src="" alt="Img">
+        <img id="img" src="" alt="Imagem do Jogo">
     </div>
     <div id="timer">Tempo: <span id="time">60</span>s</div>
     <div class="button-container">
@@ -72,72 +66,77 @@
     <button class="btn-custom" id="backButton" onclick="goBack()">Voltar</button>
 
     <script>
-
-        // Recupera o tema e os itens salvos no localStorage
-        const categoria = localStorage.getItem('categoriaSelecionada');
-        const itensCategoria = JSON.parse(localStorage.getItem('itensCategoria'));
-
+        // Definir categorias e imagens
         const imagens = {
             "Animais": ["img/animais/cachorro.jpg", "img/animais/gato.jpg", "img/animais/elefante.jpg", "img/animais/leao.jpg"],
-            "Profissões": ["img/profissões/professor.jpg", "img/profissões/medico.jpg", "img/profissões/engenheiro.jpg", "img/profissões/bombeiro.jpg"],
+            "Profissões": ["img/profissoes/professor.jpg", "img/profissoes/medico.jpg", "img/profissoes/engenheiro.jpg", "img/profissoes/bombeiro.jpg"],
             "Objetos": ["img/objetos/lapis.jpg", "img/objetos/cadeira.jpg", "img/objetos/relogio.jpg", "img/objetos/livro.jpg"],
             "Desenhos": ["img/desenhos/homem_aranha.jpg", "img/desenhos/batman.jpg", "img/desenhos/bob_esponja.jpg", "img/desenhos/mickey_mouse.jpg"],
-            "Aleatórios": ["img/aleátorio/pizza.jpg", "img/aleátorio/computador.jpg", "img/aleátorio/montanha.jpg", "img/aleátorio/arco_iris.jpg"]
+            "Aleatórios": ["img/aleatorio/pizza.jpg", "img/aleatorio/computador.jpg", "img/aleatorio/montanha.jpg", "img/aleatorio/arco_iris.jpg"]
         };
 
-        // Exibe o título e a primeira imagem
-        let itemAtual = getRandomItem();
-        document.getElementById("categoriaTitulo").textContent = categoria;
-        atualizarImagem(itemAtual);
+        // Recuperar categoria selecionada
+        const categoria = localStorage.getItem('categoriaSelecionada') || "Aleatórios";
 
-        // Função para obter um item aleatório da categoria
-        function getRandomItem() {
-            return itensCategoria[Math.floor(Math.random() * itensCategoria.length)];
+        // Exibir a primeira imagem da categoria
+        let itensCategoria = imagens[categoria];
+        let indexAtual = 0;
+
+        function atualizarImagem() {
+            document.getElementById("img").src = itensCategoria[indexAtual];
+            indexAtual = (indexAtual + 1) % itensCategoria.length;
         }
 
-        // Função para atualizar a imagem na tela
-        function atualizarImagem(item) {
-            const itemIndex = itensCategoria.indexOf(item);
-            document.getElementById("img").src = imagens[categoria][itemIndex];
+        atualizarImagem();
+
+        // Atualizar pontuação no banco de dados
+        const jogadorId = localStorage.getItem('jogadorId');
+
+        function atualizarPontuacao(tipo) {
+            if (!jogadorId) {
+                alert("Nenhum jogador identificado. Volte para a tela inicial.");
+                return;
+            }
+
+            const data = new FormData();
+            data.append('tipo', tipo);
+            data.append('id', jogadorId);
+
+            fetch('atualizar_pontuacao.php', {
+                method: 'POST',
+                body: data
+            })
+            .then(response => response.text())
+            .then(data => console.log(data))
+            .catch(error => console.error('Erro:', error));
+        }
+
+        document.getElementById("acertoBtn").addEventListener("click", () => {
+            atualizarPontuacao('acerto');
+            atualizarImagem();
+        });
+
+        document.getElementById("erroBtn").addEventListener("click", () => {
+            atualizarPontuacao('erro');
+            atualizarImagem();
+        });
+
+        // Função para voltar para a tela inicial
+        function goBack() {
+            window.location.href = 'home.html';
         }
 
         // Temporizador de 60 segundos
         let time = 60;
-        let timer = setInterval(function() {
+        let timer = setInterval(() => {
             time--;
             document.getElementById("time").textContent = time;
             if (time <= 0) {
                 clearInterval(timer);
-                finalizarJogo();
+                alert("Tempo esgotado!");
+                goBack();
             }
         }, 1000);
-
-        // Contador de acertos e erros
-        let acertos = 0;
-        let erros = 0;
-
-        document.getElementById("acertoBtn").addEventListener("click", function() {
-            acertos++;
-            itemAtual = getRandomItem();  // Seleciona um novo item da mesma categoria
-            atualizarImagem(itemAtual);   // Atualiza a imagem com o novo item
-        });
-
-        document.getElementById("erroBtn").addEventListener("click", function() {
-            erros++;
-        });
-
-        // Função para finalizar o jogo
-        function finalizarJogo() {
-            clearInterval(timer);
-            const nome = prompt("Digite seu nome para salvar a pontuação:");
-            alert(`Jogo finalizado! ${nome}, sua pontuação: ${acertos} acertos e ${erros} erros.`);
-            // Salva a pontuação e o nome, se necessário, em localStorage ou outro armazenamento.
-        }
-
-        function goBack() {
-            window.location.href = 'segundatela.html';
-        }
     </script>
 </body>
 </html>
-
