--- a/src/terceiratela.html
+++ b/src/terceiratela.html
@@ -120,11 +120,11 @@
 
     <script>
         const imagens = {
-            "Animais": ["img/animais/cachorro.jpg", "img/animais/gato.jpg", "img/animais/elefante.jpg", "img/animais/leao.jpg"],
+            "Animais": ["img/animais/cachorro.jpg", "img/animais/gato.jpg", "img/animais/elefante.jpg", "img/animais/leão.jpg"],
             "Profissões": ["img/profissões/professor.jpg", "img/profissões/medico.jpg", "img/profissões/engenheiro.jpg", "img/profissões/bombeiro.jpg"],
             "Objetos": ["img/objetos/lapis.jpg", "img/objetos/cadeira.jpg", "img/objetos/relogio.jpg", "img/objetos/livro.jpg"],
             "Desenhos": ["img/desenhos/homem_aranha.jpg", "img/desenhos/batman.jpg", "img/desenhos/bob_esponja.jpg", "img/desenhos/mickey_mouse.jpg"],
-            "Aleatórios": ["img/aleatorio/pizza.jpg", "img/aleatorio/computador.jpg", "img/aleatorio/montanha.jpg", "img/aleatorio/arco_iris.jpg"]
+            "Aleatórios": ["img/aleatório/pizza.jpg", "img/aleatório/computador.jpg", "img/aleatório/montanha.jpg", "img/aleatório/arco_iris.jpg"]
         };
 
         const categoria = localStorage.getItem('categoriaSelecionada') || "Aleatórios";
